<resources>
    <string name="app_name">LearningAndroid</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="hint_username">Nombre de usuario</string>
    <string name="hint_password">Contraseña</string>
    <string name="login_button">Iniciar Sesión</string>
    <string name="dont_have_account">¿No tienes cuenta? </string>
    <string name="create_here"> Crea una aquí</string>
    <string name="hint_email">Correo electronico</string>
    <string name="hint_passwordConfirm">Confirmar contraseña</string>
    <string name="hint_name">Nombre</string>
    <string name="join_account">Unete</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tab_search">Buscar</string>
    <string name="tab_home">Home</string>
    <string name="tab_profile">Perfil</string>
</resources>
