<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/colorPrimary"
    android:layout_height="match_parent"
    tools:context=".views.LoginActivity">
    
    <LinearLayout
        android:orientation="vertical"
        android:weightSum="1"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:layout_weight="0.5"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            
            <TextView
                android:layout_centerInParent="true"
                android:text="@string/app_name"
                android:id="@+id/logo"
                android:textStyle="bold"
                android:textSize="40dp"
                android:textColor="@color/text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </RelativeLayout>
        <ScrollView
            android:layout_weight="0.6"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:theme="@style/EditTextWhite"
                android:textColorHint="@color/text"
                android:layout_height="wrap_content">
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/username"
                    android:textColorHint="@color/text"
                    android:hint="@string/hint_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:theme="@style/EditTextWhite"
                android:textColorHint="@color/text"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/password"
                    android:hint="@string/hint_password"
                    android:textColorHint="@color/text"
                    android:inputType="textPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </android.support.design.widget.TextInputLayout>
            
           <Button
               android:onClick="toHome"
               android:text="@string/login_button"
               android:id="@+id/login"
               android:theme="@style/RaisedButtonDark"
               android:layout_width="match_parent"
               android:layout_height="wrap_content" />

            <RelativeLayout
                android:paddingTop="@dimen/top_to_button"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:textStyle="bold"
                    android:textSize="@dimen/textsize_account"
                    android:textColor="@color/text"
                    android:id="@+id/dont_account"
                    android:paddingRight="4dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dont_have_account"/>
                
               <TextView
                   android:onClick="toRegister"
                   android:id="@+id/createHere"
                   android:textSize="@dimen/textsize_account"
                   android:textColor="@color/text"
                   android:text="@string/create_here"
                   android:layout_toRightOf="@+id/dont_account"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content" />
            </RelativeLayout>

        </LinearLayout>
        </ScrollView>
    </LinearLayout>

    

</android.support.design.widget.CoordinatorLayout>